--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
     "axios": "^1.6.7",
@@ -19,6 +20,7 @@
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.10.5",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
