--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
     "axios": "^1.6.7",
+    "firebase": "^10.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.0",
     "sweetalert2": "^11.10.5",
     "swiper": "^11.0.6"
