--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.20.1",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "firebase": "^10.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
